@@ -572,6 +572,11 @@ should be of the form `#x...' where `x' is not a blank or a tab, and
   :type 'boolean
   :group 'python-mode)
 
+(defcustom py-uncomment-indents-p nil
+  "When non-nil, after uncomment indent lines. "
+  :type 'boolean
+  :group 'python-mode)
+
 (defcustom py-separator-char 47
   "The character, which separates the system file-path components.
 
@@ -5439,9 +5444,14 @@ the default"
       (goto-char end)
       (comment-region beg end arg))))
 
-;;; Uncomment forms
-(defun py-uncomment ()
-  "Uncomment lines at point.
+;; Comment forms
+(defun py-uncomment-intern (beg end)
+  (uncomment-region beg end)
+  (when py-uncomment-indents
+    (py-indent-region beg end)))
+
+(defun py-uncomment (&optional beg end)
+  "Uncomment commented lines at point.
 
 If region is active, restrict uncommenting at region "
   (interactive "*")
@@ -5449,10 +5459,12 @@ If region is active, restrict uncommenting at region "
     (save-restriction
       (when (use-region-p)
         (narrow-to-region (region-beginning) (region-end)))
-      (let ((beg (or (py-beginning-of-comment)(and (looking-at (concat "[ \t]*" comment-start)) (point)))))
-        (push-mark)
-        (py-end-of-comment)
-        (uncomment-region beg (point))))))
+      (let ((beg (or beg (progn (goto-char (point-min))
+                                (search-forward comment-start)
+                                (match-beginning 0))))
+            end)
+        (setq end (or end (py-end-of-comment)))
+        (py-uncomment-intern beg (point))))))
 
 (defun py-delete-comments-in-def-or-class ()
   "Delete all commented lines in def-or-class at point"
@@ -12427,6 +12439,7 @@ Used only, if `py-install-directory' is empty. "
                                    map global-map)
         (substitute-key-definition 'down-list 'py-down
                                    map global-map)
+
         (and (ignore-errors (require 'easymenu) t)
              ;; (easy-menu-define py-menu map "Python Tools"
              ;;           `("PyTools"
@@ -12737,7 +12750,6 @@ Ignores default of `py-switch-buffers-on-execute-p', uses it with value "non-nil
                    )
                   )
 
-
                  "-"
                  ("Mark"
                   ["Mark current block"   py-mark-block t]
@@ -12782,8 +12794,65 @@ Mark commented section at point"]
                  ("Comment"
                   ["Comment Region"   py-comment-region (point) (mark)
                    :help "Like `comment-region' but uses double hash (`#') comment starter." ]
+                  ["Uncomment" py-uncomment
+                   :help " `py-uncomment'
+
+Uncomment commented lines at point\.
+
+If region is active, restrict uncommenting at region . "]
+
                   ["Uncomment Region"     (py-comment-region (point) (mark) '(4))
                    :help "(py-comment-region (point) (mark) '(4))" ]
+                  "-"
+                  ["Comment block" py-comment-block
+                   :help " `py-comment-block'
+Comments block at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment clause" py-comment-clause
+                   :help " `py-comment-clause'
+Comments clause at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment block or clause" py-comment-block-or-clause
+                   :help " `py-comment-block-or-clause'
+Comments block-or-clause at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment def" py-comment-def
+                   :help " `py-comment-def'
+Comments def at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment class" py-comment-class
+                   :help " `py-comment-class'
+Comments class at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment def or class" py-comment-def-or-class
+                   :help " `py-comment-def-or-class'
+Comments def-or-class at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
+                  ["Comment statement" py-comment-statement
+                   :help " `py-comment-statement'
+Comments statement at point\.
+
+Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
+the default. "]
+
                   )
                  "-"
                  ("Moves"
@@ -12795,6 +12864,15 @@ Mark commented section at point"]
                   "-"
                   ["Move to start of def" py-beginning-of-def-or-class t]
                   ["Move to end of def"   py-end-of-def-or-class t]
+                  "-"
+                  ["Beginning of comment" py-beginning-of-comment
+                   :help " `py-beginning-of-comment'
+Go to beginning of comment at point. "]
+                  ["End of comment" py-end-of-comment
+                   :help " `py-end-of-comment'
+
+Go to end of comment at point. "]
+
                   "-"
                   ["Backward into nomenclature" py-backward-into-nomenclature
                    :help " `py-backward-into-nomenclature'
@@ -14224,7 +14302,6 @@ Use `M-x customize-variable' to set it permanently"
 
                    ("Indent"
 
-
                     ["Indent comment "
                      (setq py-indent-comments
                            (not py-indent-comments))
@@ -14282,7 +14359,6 @@ Use `M-x customize-variable' to set it permanently"
                      :style toggle :selected py-electric-comment-p]
 
                     )
-
 
                    ("Underscore word syntax"
                     :help "Toggle `py-underscore-word-syntax-p'"
@@ -14379,7 +14455,6 @@ Returns value of `autopair-mode'\. . "]
                    ["Switch index-function" py-switch-imenu-index-function
                     :help "`py-switch-imenu-index-function'
 Switch between `py-imenu-create-index' from 5.1 series and `py-imenu-create-index-new'."]
-
 
                    ;; py-smart-operator-mode-p forms
                    ("Smart operator mode"
@@ -14505,65 +14580,6 @@ Delete class at point, don't store deleted string in kill-ring"]
                     ["Delete def" py-delete-def
                      :help "`py-delete-def'
 Delete def at point, don't store deleted string in kill-ring"])
-
-                   ("Comment "
-                    :help "Comment forms"
-
-                    ["Uncomment" py-uncomment
-                     :help " `py-uncomment'
-
-Uncomment lines at point\.
-
-If region is active, restrict uncommenting at region . "]
-
-                    ["Comment block" py-comment-block
-                     :help " `py-comment-block'
-Comments block at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment clause" py-comment-clause
-                     :help " `py-comment-clause'
-Comments clause at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment block or clause" py-comment-block-or-clause
-                     :help " `py-comment-block-or-clause'
-Comments block-or-clause at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment def" py-comment-def
-                     :help " `py-comment-def'
-Comments def at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment class" py-comment-class
-                     :help " `py-comment-class'
-Comments class at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment def or class" py-comment-def-or-class
-                     :help " `py-comment-def-or-class'
-Comments def-or-class at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "]
-
-                    ["Comment statement" py-comment-statement
-                     :help " `py-comment-statement'
-Comments statement at point\.
-
-Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "])
 
                    ("Shift right "
                     ["Shift block right" py-shift-block-right
@@ -15013,7 +15029,9 @@ Shift def left. "]
 Comments def at point\.
 
 Uses double hash (`#') comment starter when `py-block-comment-prefix-p' is `t',
-the default. "])
+the default. "]
+
+                    )
 
                    (" Block bol "
 
@@ -15554,7 +15572,6 @@ Use pydoc on symbol at point"]
                     :help " Print object's signature\n
 Needs Pymacs"])
 
-
                   ("Completion"
                    :help "Completion options"
 
@@ -15577,6 +15594,7 @@ Try to find source definition of function at point"]
                )
 
              )
+
         map))
 
 (defvaralias 'py-mode-map 'python-mode-map)
